# SignalFlow

./: LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/scripts/: init_db.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py
backend/src/agents/core/: __init__.py  base.py  factory.py  llm_adapter.py  types.py
backend/src/agents/implementations/: __init__.py  orchestrator.py  strategy_analyzer.py
backend/src/agents/tools/: __init__.py  base.py  market_tools.py
backend/src/agents/workflows/: __init__.py  engine.py  strategy_workflow.py
backend/src/api/: deps.py  exceptions.py  middleware.py
backend/src/api/v1/: router.py  websocket.py
backend/src/api/v1/endpoints/: auth.py  (+6 more)
backend/src/core/: config.py  constants.py  exceptions.py  logging.py  security.py
backend/src/domain/entities/: __init__.py  instrument.py  signal.py  strategy.py  subscription.py  user.py
backend/src/domain/events/: __init__.py  base.py  market_events.py  signal_events.py
backend/src/domain/value_objects/: __init__.py  pagination.py  time_range.py
backend/src/infra/cache/: __init__.py  redis_client.py
backend/src/infra/database/: __init__.py  connection.py  models.py
backend/src/infra/llm/: __init__.py  base.py  factory.py  types.py
backend/src/providers/: __init__.py  base.py  registry.py
backend/src/providers/eastmoney/: __init__.py
backend/src/providers/jisilu/: __init__.py  qdii_provider.py
backend/src/providers/news/: __init__.py
backend/src/providers/tushare/: __init__.py
backend/src/services/: __init__.py  notification_service.py  signal_service.py  strategy_service.py  subscription_service.py  user_service.py
backend/src/strategies/: __init__.py  base.py  registry.py
backend/src/strategies/ai/: __init__.py
backend/src/strategies/arbitrage/: __init__.py  qdii_premium.py
backend/src/strategies/fundamental/: __init__.py
backend/src/strategies/technical/: __init__.py
backend/src/workers/: celery_app.py
backend/src/workers/tasks/: ingest_tasks.py  notification_tasks.py  strategy_tasks.py
(+83 files in other folders)
